<?xml version="1.0"?>
<package format="2">
  <name>turtlebro_voice_nav</name>
  <version>1.0.0</version>
  <description>Пакет для управления роботом TurtleBro с использованием голосовых команд</description>
  <maintainer email="nikolay_ivanov@voltbro.com">Nikolay Ivanov</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>